--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -8,7 +8,7 @@
         <button class="btn btn-secondary" data-bs-target="#modal-remove" data-bs-toggle="modal"
             id="btn-remove-book"><i class="fa-solid fa-trash me-2"></i> Remover livro</button>
 
-        <button class="btn btn-info" type="button" id="btn-reload"><i class="fa-solid fa-rotate-right me-2"></i> Atualizar livros</button>
+        <button class="btn btn-info" type="button" id="btn-reload-list"><i class="fa-solid fa-rotate-right me-2"></i> Atualizar livros</button>
 
         <button style="min-width: 125px;" class="ms-auto btn btn-danger" onclick="logout()">
             <i class="fa-solid fa-power-off me-2"></i> Deslogar
@@ -119,7 +119,11 @@
         <p class="text-alert mb-0"></p>
     </div>
 
-    <script src="/js/books/json.js"></script>
+
+    {{!-- Funções da API Bibliorinda --}}
+    <script src="/js/func/api/getAllBooks.js"></script>
+
+    {{!-- Funções do sistema Bibliorinda --}}
     <script src="/js/func/loadList.js"></script>
     <script src="/js/func/reloadList.js"></script>
     <script src="/js/func/searchList.js"></script>
