--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -115,7 +115,7 @@
         </div>
     </div>
 
-    <div class="alert show position-absolute d-flex align-items-center fade" style="top: 15px; right: 15px;">
+    <div class="alert position-absolute d-flex align-items-center fade" style="top: 15px; right: 15px;">
         <p class="text-alert mb-0"></p>
     </div>
 
