--- a/views/login.hbs
+++ b/views/login.hbs
@@ -31,8 +31,7 @@
         </div>
     </div>
 
-    <div class="alert alert-danger position-absolute d-flex align-items-center fade" style="top: 15px; right: 15px;">
-        <i class="fa-solid fa-triangle-exclamation fs-4 me-2"></i>
+    <div class="alert position-absolute d-flex align-items-center fade" style="top: 15px; right: 15px;">
         <p class="text-alert mb-0"></p>
     </div>
 </content>
