--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -39,6 +39,36 @@
         </p>
     </div>
 
+    <!-- Modal de adicionar livro -->
+    <div class="modal fade" tabindex="-1" id="modal-add">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header flex-column">
+                    <p class="h2">Adicionar um livro..</p>
+                    <p class="h5">Preencha os campos com *</p>
+                    <small class="mt-4 align-self-start">Atenção este livro terá o ID: <strong
+                            id="book-id"></strong></small>
+                </div>
+
+                <div class="modal-body d-flex gap-2 flex-column">
+                    <input id="input-shelf" required class="form-control" type="text"
+                        placeholder="Insira a prateleira do livro">
+                    <input id="input-name" required class="form-control" type="text"
+                        placeholder="* Insira o nome do livro">
+                    <input id="input-category" class="form-control" type="text"
+                        placeholder="* Insira a categoria do livro">
+                    <input id="input-author" required class="form-control" type="text"
+                        placeholder="* Insira o nome do autor">
+                </div>
+
+                <div class="modal-footer">
+                    <button id="btn-save-book" type="button" class="btn btn-primary"><i class="fa-solid fa-book-medical me-2"></i> Adicionar livro</button>
+                    <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i> Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Modal de remover livro -->
     <div class="modal modal-lg fade" tabindex="-1" id="modal-remove">
         <div class="modal-dialog">
@@ -78,37 +108,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button class="btn btn-success" disabled><i class="fa-solid fa-floppy-disk me-2"></i> Salvar</button>
-                    <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i> Fechar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal de adicionar livro -->
-    <div class="modal fade" tabindex="-1" id="modal-add">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header flex-column">
-                    <p class="h2">Adicionar um livro..</p>
-                    <p class="h5">Preencha os campos com *</p>
-                    <small class="mt-4 align-self-start">Atenção este livro terá o ID: <strong
-                            id="book-id"></strong></small>
-                </div>
-
-                <div class="modal-body d-flex gap-2 flex-column">
-                    <input id="input-shelf" required class="form-control" type="text"
-                        placeholder="Insira a prateleira do livro">
-                    <input id="input-name" required class="form-control" type="text"
-                        placeholder="* Insira o nome do livro">
-                    <input id="input-category" class="form-control" type="text"
-                        placeholder="* Insira a categoria do livro">
-                    <input id="input-author" required class="form-control" type="text"
-                        placeholder="* Insira o nome do autor">
-                </div>
-
-                <div class="modal-footer">
-                    <button id="btn-save-book" type="button" class="btn btn-primary"><i class="fa-solid fa-book-medical me-2"></i> Adicionar livro</button>
+                    <button id="btn-trash-books" class="btn btn-success"><i class="fa-solid fa-floppy-disk me-2"></i> Salvar</button>
                     <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i> Fechar</button>
                 </div>
             </div>
