--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -19,7 +19,7 @@
     <input autofocus autocomplete="off" type="text" class="form-control form-control-lg mb-4" placeholder="..."
         id="input-search">
 
-    <table class="table table-dark table-striped-columns" style="min-height: 150px;">
+    <table class="table table-dark table-striped-columns">
         <thead>
             <tr>
                 <td>Id</td>
@@ -33,11 +33,7 @@
         <tbody id="list-books"></tbody>
     </table>
 
-    <div id="warn-search" style="display: none;" class="mb-5">
-        <p class="mb-0 fw-bold fs-4 text-dark">
-            <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livros com essas características.
-        </p>
-    </div>
+    <div id="warn-search" style="display: none;" class="mb-5"></div>
 
     <!-- Modal de adicionar livro -->
     <div class="modal fade" tabindex="-1" id="modal-add">
