Adicionando temporariamente o botão de truncar tabela

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -10,6 +10,8 @@
 
         <button class="btn btn-info" type="button" id="btn-reload-list"><i class="fa-solid fa-rotate-right me-2"></i> Atualizar livros</button>
 
+        <button class="btn btn-warning" type="button" id="btn-truncate-list"><i class="fas fa-exclamation-circle me-2"></i> Truncar</button>
+
         <button style="min-width: 125px;" class="ms-auto btn btn-danger" onclick="logout()">
             <i class="fa-solid fa-power-off me-2"></i> Deslogar
         </button>
