--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,16 +1,20 @@
 <div class="p-5" style="min-height: 350px;">
-    <p class="h3 mb-3">Olá, {{name}}! Boas vindas ao <span class="h1 fw-bold fs-3 mb-0 text-dark" style="letter-spacing: 10px;">BIBLIORINDA</span></p>
+    <p class="h3 mb-3">Olá, {{name}}! Boas vindas ao <span class="h1 fw-bold fs-3 mb-0 text-dark"
+            style="letter-spacing: 10px;">BIBLIORINDA</span></p>
     <div class="d-flex gap-3 mb-5">
-        <button class="btn btn-primary" data-bs-target="#modal-add" data-bs-toggle="modal" id="btn-add-book"><i class="fa-solid fa-book-medical me-2"></i> Adicionar
+        <button class="btn btn-primary" data-bs-target="#modal-add" data-bs-toggle="modal" id="btn-add-book"><i
+                class="fa-solid fa-book-medical me-2"></i> Adicionar
             novo
             livro</button>
 
-        <button class="btn btn-secondary" data-bs-target="#modal-remove" data-bs-toggle="modal"
-            id="btn-remove-book"><i class="fa-solid fa-trash me-2"></i> Remover livro</button>
+        <button class="btn btn-secondary" data-bs-target="#modal-remove" data-bs-toggle="modal" id="btn-remove-book"><i
+                class="fa-solid fa-trash me-2"></i> Remover livro</button>
 
-        <button class="btn btn-info" type="button" id="btn-reload-list"><i class="fa-solid fa-rotate-right me-2"></i> Atualizar livros</button>
+        <button class="btn btn-info" type="button" id="btn-reload-list"><i class="fa-solid fa-rotate-right me-2"></i>
+            Atualizar livros</button>
 
-        <button class="btn btn-warning" type="button" id="btn-truncate-list"><i class="fas fa-exclamation-circle me-2"></i> Truncar</button>
+        <button class="btn btn-warning" type="button" id="btn-truncate-list"><i
+                class="fas fa-exclamation-circle me-2"></i> Truncar</button>
 
         <button style="min-width: 125px;" class="ms-auto btn btn-danger" onclick="logout()">
             <i class="fa-solid fa-power-off me-2"></i> Deslogar
@@ -49,17 +53,17 @@
                 <div class="modal-body d-flex gap-2 flex-column">
                     <input id="input-shelf" class="form-control" type="text"
                         placeholder="* Insira a prateleira do livro">
-                    <input id="input-name" class="form-control" type="text"
-                        placeholder="* Insira o nome do livro">
+                    <input id="input-name" class="form-control" type="text" placeholder="* Insira o nome do livro">
                     <input id="input-category" class="form-control" type="text"
                         placeholder="* Insira a categoria do livro">
-                    <input id="input-author" class="form-control" type="text"
-                        placeholder="* Insira o nome do autor">
+                    <input id="input-author" class="form-control" type="text" placeholder="* Insira o nome do autor">
                 </div>
 
                 <div class="modal-footer">
-                    <button id="btn-save-book" type="button" class="btn btn-primary"><i class="fa-solid fa-book-medical me-2"></i> Adicionar livro</button>
-                    <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i> Fechar</button>
+                    <button id="btn-save-book" type="button" class="btn btn-primary"><i
+                            class="fa-solid fa-book-medical me-2"></i> Adicionar livro</button>
+                    <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i>
+                        Fechar</button>
                 </div>
             </div>
         </div>
@@ -80,7 +84,7 @@
                     <input class="form-control" id="input-remove" type="text" placeholder="...">
 
                     <table class="mt-4 table table-dark table-striped"
-                        style="overflow-y: auto; max-height: 300px; display: inline-block; width: 100%">
+                        style="overflow-y: auto; max-height: 216px; display: inline-block; width: 100%">
                         <thead>
                             <tr>
                                 <td>Id</td>
@@ -101,11 +105,21 @@
                             características.
                         </p>
                     </div>
+
+                    <div id="view-trash-book" class="fw-bold fs-5"></div>
                 </div>
 
                 <div class="modal-footer">
-                    <button id="btn-trash-books" class="btn btn-success"><i class="fa-solid fa-floppy-disk me-2"></i> Salvar</button>
-                    <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i> Fechar</button>
+                    
+                    <div style="margin-right: auto;">
+                        <button id="btn-trash-books" class="btn btn-success"><i
+                                class="fa-solid fa-floppy-disk me-2"></i> Salvar</button>
+                        <button id="btn-clean-books" class="btn btn-danger"><i class="fa-solid fa-xmark me-2"></i>
+                            Cancelar tudo</button>
+                    </div>
+
+                    <button class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-xmark me-2"></i>
+                        Fechar</button>
                 </div>
             </div>
         </div>
