--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -142,25 +142,46 @@
 
                     <div class="input-group">
                         <input class="form-control" id="input-edit" min="1" type="number" placeholder="...">
-                        <button class="btn btn-primary"><i class="fas fa-search me-2"></i> Pesquisar</button>
+                        <button id="btn-search-edit" class="btn btn-primary"><i class="fas fa-search me-2"></i>
+                            Pesquisar</button>
                     </div>
 
                     <div id="warn-edit" class="mt-2" style="display: none;">
-                        <p class="mb-0 fw-bold fs-4 text-dark">
+                        <p class="mb-0 fw-bold fs-5 text-dark">
                             <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livros com essas
                             características.
                         </p>
                     </div>
 
                     <div class="mt-4 d-flex flex-column gap-2 border rounded p-2">
-                        <input class="form-control" type="text" placeholder="ID..." readonly>
                         <div class="d-flex gap-2">
-                            <input class="form-control w-25 d-block" type="text" placeholder="Prateleira..." readonly>
-                            <input class="form-control w-75 d-block" type="text" placeholder="Título..." readonly>
+                            <div class="w-25">
+                                <label for="input-id-edit">ID:</label>
+                                <input id="input-id-edit" class="form-control" type="text" placeholder="..." readonly>
+                            </div>
+
+                            <div class="w-25">
+                                <label for="input-shelf-edit">Prateleira:</label>
+                                <input id="input-shelf-edit" class="form-control d-block" type="text" placeholder="..."
+                                    readonly>
+                            </div>
+                            <div class="w-50">
+                                <label for="input-title-edit">Título:</label>
+                                <input id="input-title-edit" class="form-control d-block" type="text" placeholder="..."
+                                    readonly>
+                            </div>
                         </div>
                         <div class="d-flex gap-2">
-                            <input class="form-control" type="text" placeholder="Categoria..." readonly>
-                            <input class="form-control" type="text" placeholder="Ator..." readonly>
+                            <div class="w-50">
+                                <label for="input-category-edit">Categoria:</label>
+                                <input id="input-category-edit" class="form-control" type="text" placeholder="..."
+                                    readonly>
+                            </div>
+                            <div class="w-50">
+                                <label for="input-author-edit">Ator:</label>
+                                <input id="input-author-edit" class="form-control" type="text" placeholder="..."
+                                    readonly>
+                            </div>
                         </div>
                     </div>
                 </div>
