--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -3,9 +3,7 @@
             style="letter-spacing: 10px;">BIBLIORINDA</span></p>
     <div class="d-flex gap-3 mb-5">
         <button class="btn btn-primary" data-bs-target="#modal-add" data-bs-toggle="modal" id="btn-add-book"><i
-                class="fa-solid fa-book-medical me-2"></i> Adicionar
-            novo
-            livro</button>
+                class="fa-solid fa-book-medical me-2"></i> Adicionar novo livro</button>
 
         <button class="btn btn-secondary" data-bs-target="#modal-remove" data-bs-toggle="modal" id="btn-remove-book"><i
                 class="fa-solid fa-trash me-2"></i> Remover livro</button>
@@ -54,8 +52,12 @@
                 </div>
 
                 <div class="modal-body d-flex gap-2 flex-column">
-                    <input id="input-shelf" class="form-control" type="text"
-                        placeholder="* Insira a prateleira do livro">
+                    <div>
+                        <input id="input-shelf" class="form-control" type="text"
+                            placeholder="* Insira a prateleira do livro">
+                        <span class="mt-0 shelf-invalid-feedback invalid-feedback"></span>
+                    </div>
+
                     <input id="input-name" class="form-control" type="text" placeholder="* Insira o nome do livro">
                     <input id="input-category" class="form-control" type="text"
                         placeholder="* Insira a categoria do livro">
@@ -148,8 +150,7 @@
 
                     <div id="warn-edit" class="mt-2" style="display: none;">
                         <p class="mb-0 fw-bold fs-5 text-dark">
-                            <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livros com essas
-                            características.
+                            <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livro com esse ID.
                         </p>
                     </div>
 
