--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,23 +1,25 @@
 <div class="p-5" style="min-height: 350px;">
-    <p class="h3 mb-3">Olá, {{name}}! Boas vindas ao <span class="h1 fw-bold fs-3 mb-0 text-dark"
-            style="letter-spacing: 10px;">BIBLIORINDA</span></p>
-    <div class="d-flex gap-3 mb-5">
-        <button class="btn btn-primary" data-bs-target="#modal-add" data-bs-toggle="modal" id="btn-add-book"><i
-                class="fa-solid fa-book-medical me-2"></i> Adicionar novo livro</button>
+    <p class="h3 mb-3" style="font-family: Poppins">Olá, Débora! Boas vindas ao <span
+            class="h1 fw-bold fs-3 mb-0 text-dark"
+            style="letter-spacing: 5px; font-family: Montserrat: display: inline-block; font-size: clamp(0,625rem, 0,6237rem + 0,6689vw, 1rem);" >BIBLIORINDA</span>!</p>
+    <div class="d-flex gap-3 mb-5 flex-wrap">
+        <button class="btn btn-primary" tabindex="-1" data-bs-target="#modal-add" data-bs-toggle="modal"
+            id="btn-add-book"><i class="fa-solid fa-book-medical me-2"></i> Adicionar novo livro</button>
 
-        <button class="btn btn-secondary" data-bs-target="#modal-remove" data-bs-toggle="modal" id="btn-remove-book"><i
-                class="fa-solid fa-trash me-2"></i> Remover livro</button>
+        <button class="btn btn-secondary" tabindex="-1" data-bs-target="#modal-remove" data-bs-toggle="modal"
+            id="btn-remove-book"><i class="fa-solid fa-trash me-2"></i> Remover livro</button>
 
-        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal-edit" type="button"
-            id="btn-edit-book"><i class="fas fa-edit me-2"></i> Editar livro</button>
+        <button class="btn btn-secondary" tabindex="-1" data-bs-toggle="modal" data-bs-target="#modal-edit"
+            type="button" id="btn-edit-book"><i class="fas fa-edit me-2"></i> Editar livro</button>
 
-        <button class="btn btn-info" type="button" id="btn-reload-list"><i class="fa-solid fa-rotate-right me-2"></i>
+        <button class="btn btn-info" tabindex="-1" type="button" id="btn-reload-list"><i
+                class="fa-solid fa-rotate-right me-2"></i>
             Atualizar livros</button>
 
-        <button class="btn btn-warning" type="button" id="btn-truncate-list"><i
+        <button class="btn btn-warning" tabindex="-1" type="button" id="btn-truncate-list"><i
                 class="fas fa-exclamation-circle me-2"></i> Truncar</button>
 
-        <button style="min-width: 125px;" class="ms-auto btn btn-danger" onclick="logout()">
+        <button tabindex="-1" class="ms-auto btn btn-danger" onclick="logout()">
             <i class="fa-solid fa-power-off me-2"></i> Deslogar
         </button>
     </div>
@@ -26,19 +28,21 @@
     <input autofocus autocomplete="off" type="text" class="form-control form-control-lg mb-4" placeholder="..."
         id="input-search">
 
-    <table class="table table-dark table-hover table-striped" id="table-search">
-        <thead>
-            <tr>
-                <td>Id</td>
-                <td>Prateleira</td>
-                <td>Título</td>
-                <td>Categoria</td>
-                <td>Ator</td>
-            </tr>
-        </thead>
+    <div class="table-responsive">
+        <table class="table table-dark table-hover table-striped" id="table-search">
+            <thead>
+                <tr>
+                    <td>Id</td>
+                    <td>Prateleira</td>
+                    <td>Título</td>
+                    <td>Categoria</td>
+                    <td>Ator</td>
+                </tr>
+            </thead>
 
-        <tbody id="list-books"></tbody>
-    </table>
+            <tbody id="list-books"></tbody>
+        </table>
+    </div>
 
     <div id="warn-search" style="display: none;"></div>
 
@@ -88,21 +92,23 @@
                         categoria:</label>
                     <input class="form-control" id="input-remove" type="text" placeholder="...">
 
-                    <table class="mt-4 table table-dark table-striped"
-                        style="overflow-y: auto; max-height: 216px; display: inline-block; width: 100%">
-                        <thead>
-                            <tr>
-                                <td>Id</td>
-                                <td>Prateleira</td>
-                                <td class="w-50">Título</td>
-                                <td class="w-25">Categoria</td>
-                                <td class="w-25">Ator</td>
-                                <td></td>
-                            </tr>
-                        </thead>
+                    <div class="table-responsive">
+                        <table class="mt-4 table table-dark table-striped"
+                            style="overflow-y: auto; max-height: 216px; display: inline-block; width: 100%">
+                            <thead>
+                                <tr>
+                                    <td>Id</td>
+                                    <td>Prateleira</td>
+                                    <td class="w-50">Título</td>
+                                    <td class="w-25">Categoria</td>
+                                    <td class="w-25">Ator</td>
+                                    <td></td>
+                                </tr>
+                            </thead>
 
-                        <tbody id="list-remove"></tbody>
-                    </table>
+                            <tbody id="list-remove"></tbody>
+                        </table>
+                    </div>
 
                     <div id="warn-remove" style="display: none;">
                         <p class="mb-0 fw-bold fs-4 text-dark">
@@ -188,8 +194,6 @@
                     </div>
                 </div>
 
-
-
                 <div class="modal-footer">
                     <button id="btn-save-edit" class="btn btn-success"><i class="fa-solid fa-floppy-disk me-2"></i>
                         Salvar alterações</button>
@@ -204,7 +208,6 @@
     <div class="alert position-absolute d-flex align-items-center fade" style="top: 15px; right: 15px;">
         <p class="text-alert mb-0"></p>
     </div>
-
 
     {{!-- Funções da API Bibliorinda --}}
     <script src="/js/func/api/getAllBooks.js"></script>
