Tornando as mensagens de aviso em linha padronizados

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -37,7 +37,8 @@
     </div>
 
 
-    <label class="form-label fs-5 text-white" for="input-search">Pesquise por nome, prateleira, ator ou categoria:</label>
+    <label class="form-label fs-5 text-white" for="input-search">Pesquise por nome, prateleira, ator ou
+        categoria:</label>
     <input autofocus autocomplete="off" type="text" class="form-control form-control-lg mb-4" placeholder="..."
         id="input-search">
 
@@ -123,12 +124,7 @@
                         </table>
                     </div>
 
-                    <div id="warn-remove" style="display: none;">
-                        <p class="mb-0 fw-bold fs-4 text-dark">
-                            <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livros com essas
-                            características.
-                        </p>
-                    </div>
+                    <div id="warn-remove" style="display: none;"></div>
 
                     <div id="view-trash-book" class="fw-bold fs-5"></div>
                 </div>
@@ -168,9 +164,7 @@
                     </div>
 
                     <div id="warn-edit" class="mt-2" style="display: none;">
-                        <p class="mb-0 fw-bold fs-5 text-dark">
-                            <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livro com esse ID.
-                        </p>
+                        <p class="mb-0 fw-bold fs-5 text-dark">Não achei livro com esse ID.</p>
                     </div>
 
                     <div class="mt-4 d-flex flex-column gap-2 border rounded p-2" id="inputs-edit">
@@ -259,10 +253,7 @@
                     </div>
 
                     <div id="warn-external" style="display: none;">
-                        <p class="mb-0 fw-bold fs-4 text-dark">
-                            <i class="fa-solid fa-magnifying-glass-plus"></i> Não achei livros com essas
-                            características.
-                        </p>
+                        <p class="mb-0 fw-bold fs-4 text-dark">Não achei livros com essas características.</p>
                     </div>
                 </div>
 
