Padronizando as letras maíusculas na edição da prateleira

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -61,7 +61,7 @@
     <div id="warn-search" style="display: none;"></div>
 
     <!-- Modal de adicionar livro -->
-    <div class="modal fade" tabindex="-1" id="modal-add">
+    <div class="modal fade" tabindex="-1" aria-hidden="true" id="modal-add">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header flex-column">
@@ -93,7 +93,7 @@
     </div>
 
     <!-- Modal de remover livro -->
-    <div class="modal modal-lg fade" tabindex="-1" id="modal-remove">
+    <div class="modal modal-lg fade" tabindex="-1" aria-hidden="true" id="modal-remove">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header d-flex flex-column">
@@ -146,7 +146,7 @@
     </div>
 
     <!-- Modal de editar livro -->
-    <div class="modal modal-lg fade" tabindex="-1" id="modal-edit">
+    <div class="modal modal-lg fade" tabindex="-1" aria-hidden="true" id="modal-edit">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header d-flex flex-column">
@@ -213,7 +213,7 @@
     </div>
 
     <!-- Modal de buscar livros no externo -->
-    <div class="modal fade" tabindex="-1" id="modal-external">
+    <div class="modal fade" tabindex="-1" aria-hidden="true" id="modal-external">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header flex-column">
